<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home_button"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/shelvesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_library_books_24"
        android:title="@string/shelves_list_button"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/booksFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_book_24"
        android:title="@string/books_list_button"
        app:showAsAction="ifRoom"/>
</menu>